Add list functionality to invocationApi
