# pkg/apiserver/apiserver.pb.go
@@ -324,6 +324,7 @@ type WorkflowInvocationAPIClient interface {
 	// In case that an invocation already is canceled, has failed or has completed, nothing happens.
 	// In case that an invocation does not exist a HTTP 404 error status is returned.
 	Cancel(ctx context.Context, in *WorkflowInvocationIdentifier, opts ...grpc.CallOption) (*types.Empty, error)
+	List(ctx context.Context, in *types.Empty, opts ...grpc.CallOption) (*WorkflowInvocationList, error)
 	// Get the specification and status of a workflow invocation
 	//
 	// Get returns three different aspects of the workflow invocation, namely the spec (specification), status and logs.
@@ -357,6 +358,15 @@ func (c *workflowInvocationAPIClient) Cancel(ctx context.Context, in *WorkflowIn
 	return out, nil
 }
 
+func (c *workflowInvocationAPIClient) List(ctx context.Context, in *types.Empty, opts ...grpc.CallOption) (*WorkflowInvocationList, error) {
+	out := new(WorkflowInvocationList)
+	err := grpc.Invoke(ctx, "/apiserver.WorkflowInvocationAPI/List", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *workflowInvocationAPIClient) Get(ctx context.Context, in *WorkflowInvocationIdentifier, opts ...grpc.CallOption) (*types.WorkflowInvocationContainer, error) {
 	out := new(types.WorkflowInvocationContainer)
 	err := grpc.Invoke(ctx, "/apiserver.WorkflowInvocationAPI/Get", in, out, c.cc, opts...)
@@ -379,6 +389,7 @@ type WorkflowInvocationAPIServer interface {
 	// In case that an invocation already is canceled, has failed or has completed, nothing happens.
 	// In case that an invocation does not exist a HTTP 404 error status is returned.
 	Cancel(context.Context, *WorkflowInvocationIdentifier) (*types.Empty, error)
+	List(context.Context, *types.Empty) (*WorkflowInvocationList, error)
 	// Get the specification and status of a workflow invocation
 	//
 	// Get returns three different aspects of the workflow invocation, namely the spec (specification), status and logs.
@@ -426,6 +437,24 @@ func _WorkflowInvocationAPI_Cancel_Handler(srv interface{}, ctx context.Context,
 	return interceptor(ctx, in, info, handler)
 }
 
+func _WorkflowInvocationAPI_List_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(types.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(WorkflowInvocationAPIServer).List(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/apiserver.WorkflowInvocationAPI/List",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(WorkflowInvocationAPIServer).List(ctx, req.(*types.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _WorkflowInvocationAPI_Get_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(WorkflowInvocationIdentifier)
 	if err := dec(in); err != nil {
@@ -455,6 +484,10 @@ var _WorkflowInvocationAPI_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Cancel",
 			Handler:    _WorkflowInvocationAPI_Cancel_Handler,
+		},
+		{
+			MethodName: "List",
+			Handler:    _WorkflowInvocationAPI_List_Handler,
 		},
 		{
 			MethodName: "Get",
@@ -629,41 +662,42 @@ var _FunctionApi_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("pkg/apiserver/apiserver.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 575 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x54, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0x26, 0x29, 0x72, 0xeb, 0xb1, 0x5a, 0xda, 0x85, 0xa6, 0x91, 0x95, 0xa2, 0xb0, 0x42, 0xa2,
-	0xaa, 0x84, 0x2d, 0x52, 0x84, 0x44, 0x0f, 0x88, 0x2a, 0x94, 0x50, 0xa9, 0x07, 0x48, 0x0e, 0x9c,
-	0x1d, 0x7b, 0x92, 0x2c, 0x49, 0x76, 0x8d, 0x77, 0x9d, 0x2a, 0x20, 0x2e, 0xbc, 0x02, 0x2f, 0xc3,
-	0x7b, 0xf0, 0x0a, 0x9c, 0x78, 0x0a, 0xe4, 0xf5, 0x5f, 0x54, 0x47, 0x55, 0x2e, 0x89, 0xf7, 0xf3,
-	0xec, 0xf7, 0x7d, 0xf3, 0xcd, 0xc8, 0x70, 0x1c, 0x4e, 0xc7, 0xae, 0x17, 0x32, 0x89, 0xd1, 0x02,
-	0xa3, 0xf2, 0xc9, 0x09, 0x23, 0xa1, 0x04, 0x31, 0x0b, 0xc0, 0x7e, 0x3d, 0x66, 0x6a, 0x12, 0x0f,
-	0x1d, 0x5f, 0xcc, 0xdd, 0x11, 0x93, 0x92, 0x09, 0x9e, 0xff, 0x3f, 0xbf, 0x11, 0xd1, 0x74, 0x34,
-	0x13, 0x37, 0x6e, 0xc2, 0xa6, 0x96, 0x21, 0xca, 0xf4, 0x37, 0x65, 0xb1, 0xbb, 0x9b, 0x5e, 0xc5,
-	0x05, 0x72, 0x25, 0x95, 0x88, 0x70, 0xe5, 0x31, 0x23, 0x69, 0x8d, 0x85, 0x18, 0xcf, 0x30, 0xb1,
-	0xe8, 0x7a, 0x9c, 0x0b, 0xe5, 0x29, 0x26, 0x78, 0x26, 0x41, 0x9f, 0x02, 0xf9, 0x9c, 0x31, 0x5d,
-	0x05, 0xc8, 0x15, 0x1b, 0x31, 0x8c, 0xc8, 0x1e, 0xd4, 0x59, 0xd0, 0xac, 0xb5, 0x6b, 0x27, 0x66,
-	0xbf, 0xce, 0x02, 0x7a, 0x04, 0x87, 0x03, 0xf4, 0x22, 0x7f, 0x92, 0xd7, 0xf6, 0xf1, 0x6b, 0x8c,
-	0x52, 0xd1, 0x57, 0xd0, 0xb8, 0xfd, 0x42, 0x86, 0x82, 0x4b, 0x24, 0x2d, 0x30, 0x73, 0x8b, 0xb2,
-	0x59, 0x6b, 0x6f, 0x9d, 0x98, 0xfd, 0x12, 0xa0, 0x0e, 0xb4, 0x0a, 0x59, 0xbe, 0x10, 0xbe, 0xf6,
-	0x74, 0x87, 0x81, 0x33, 0x38, 0xaa, 0xd6, 0x7f, 0x8a, 0x31, 0x5a, 0x92, 0x26, 0x6c, 0xcb, 0x78,
-	0xf8, 0x05, 0x7d, 0x95, 0xd5, 0xe7, 0x47, 0x7a, 0x0e, 0x8d, 0xea, 0xa5, 0x6b, 0x26, 0x15, 0x69,
-	0x83, 0xc5, 0x0a, 0x24, 0xb7, 0xb7, 0x0a, 0xd1, 0x37, 0xeb, 0x0c, 0xf6, 0x50, 0xf5, 0x31, 0x6d,
-	0xef, 0x31, 0x18, 0x69, 0xd2, 0xfa, 0xb2, 0xd5, 0x31, 0x9c, 0xcb, 0xe4, 0xd8, 0xcf, 0x50, 0xda,
-	0x06, 0xe3, 0x03, 0x7a, 0x33, 0x35, 0x21, 0x0d, 0x30, 0xa4, 0xf2, 0x54, 0x2c, 0x33, 0x7b, 0xd9,
-	0xa9, 0xf3, 0xaf, 0x06, 0x56, 0x2e, 0x71, 0xf1, 0xf1, 0x8a, 0x5c, 0x83, 0xd1, 0x8d, 0xd0, 0x53,
-	0x48, 0x76, 0x9d, 0x1c, 0x1f, 0x84, 0xe8, 0xdb, 0xc7, 0x4e, 0xb9, 0x5d, 0xd5, 0x59, 0xd1, 0x47,
-	0x3f, 0xff, 0xfc, 0xfd, 0x55, 0xdf, 0xa3, 0xa6, 0x9b, 0xc7, 0x7b, 0x5e, 0x3b, 0x25, 0xef, 0xe0,
-	0xbe, 0xee, 0xd4, 0x70, 0x2e, 0xe7, 0xa1, 0x5a, 0xda, 0x4f, 0x56, 0x48, 0xd6, 0x4f, 0x8c, 0x1e,
-	0x68, 0x22, 0x8b, 0x94, 0x44, 0xa4, 0x07, 0x5b, 0x3d, 0x54, 0xe4, 0x6e, 0x07, 0xb6, 0x59, 0x80,
-	0xb4, 0xa1, 0x39, 0xf6, 0xc9, 0x5e, 0xc1, 0xe1, 0x7e, 0x67, 0xc1, 0x8f, 0xce, 0xef, 0x3a, 0x1c,
-	0x56, 0xf3, 0x4c, 0xda, 0x1e, 0x82, 0x91, 0x00, 0x53, 0x24, 0x47, 0x4e, 0xb5, 0x42, 0x07, 0xf0,
-	0x6c, 0x9d, 0xfc, 0x9a, 0xad, 0xc9, 0xd5, 0xa9, 0xe5, 0x96, 0xa3, 0x4c, 0xc2, 0x18, 0x80, 0xd1,
-	0xf5, 0xb8, 0x8f, 0x33, 0xb2, 0x29, 0x95, 0x9d, 0xe5, 0x46, 0x9b, 0x9a, 0x92, 0x9c, 0xee, 0xaf,
-	0x50, 0xea, 0x96, 0xc8, 0x28, 0xcd, 0x66, 0x63, 0xc6, 0xd6, 0x9a, 0xd7, 0x5d, 0xc1, 0x95, 0xc7,
-	0x38, 0x46, 0xb9, 0x0e, 0xa9, 0xe8, 0x74, 0xde, 0xc2, 0xce, 0x45, 0x30, 0x67, 0x3a, 0xac, 0x97,
-	0x60, 0x0c, 0xf4, 0xf6, 0x14, 0x73, 0x3d, 0x58, 0x91, 0x4f, 0x17, 0x8e, 0x3e, 0xd0, 0x54, 0x26,
-	0xd9, 0x76, 0xb3, 0x4d, 0x0b, 0xc0, 0x7a, 0x1f, 0x73, 0x5f, 0x27, 0x1e, 0x32, 0xf2, 0x02, 0x20,
-	0x89, 0x95, 0x79, 0x33, 0xf6, 0x0d, 0x0b, 0xa2, 0xbc, 0xe1, 0x87, 0xfa, 0xf6, 0x2e, 0xb1, 0x5c,
-	0x59, 0x16, 0xd1, 0x62, 0x48, 0xb7, 0xcb, 0x77, 0x74, 0x79, 0x9d, 0xdc, 0x1b, 0x1a, 0xfa, 0x83,
-	0x72, 0xf6, 0x3f, 0x00, 0x00, 0xff, 0xff, 0xab, 0x6e, 0x15, 0x74, 0x1a, 0x05, 0x00, 0x00,
+	// 586 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x94, 0xcf, 0x6e, 0xd3, 0x4e,
+	0x10, 0xc7, 0x7f, 0x49, 0x7f, 0x72, 0xeb, 0x89, 0x5a, 0xda, 0x81, 0xa6, 0x51, 0x94, 0xa2, 0xb0,
+	0x42, 0xa2, 0xaa, 0x84, 0x2d, 0x52, 0x84, 0x44, 0x0f, 0x88, 0x2a, 0xb4, 0xa5, 0x52, 0x0f, 0x90,
+	0x1c, 0x38, 0x3b, 0xce, 0x24, 0x5d, 0x9a, 0xee, 0x1a, 0xef, 0xba, 0x55, 0x41, 0x48, 0x88, 0x57,
+	0xe0, 0xd1, 0x78, 0x05, 0x4e, 0x3c, 0x05, 0xf2, 0xfa, 0xaf, 0x6a, 0xab, 0xca, 0x25, 0xf1, 0x8e,
+	0x67, 0x3f, 0xf3, 0x9d, 0xef, 0x8c, 0x0c, 0xbb, 0xc1, 0xe5, 0xdc, 0xf5, 0x02, 0xae, 0x28, 0xbc,
+	0xa6, 0xb0, 0x78, 0x72, 0x82, 0x50, 0x6a, 0x89, 0x76, 0x1e, 0xe8, 0xbe, 0x9e, 0x73, 0x7d, 0x11,
+	0x4d, 0x1c, 0x5f, 0x5e, 0xb9, 0x33, 0xae, 0x14, 0x97, 0x22, 0xfb, 0x7f, 0x7e, 0x23, 0xc3, 0xcb,
+	0xd9, 0x42, 0xde, 0xb8, 0x31, 0x4d, 0xdf, 0x06, 0xa4, 0x92, 0xdf, 0x84, 0xd2, 0x1d, 0x2e, 0x7b,
+	0x95, 0xae, 0x49, 0x68, 0xa5, 0x65, 0x48, 0xa5, 0xc7, 0x14, 0xd2, 0x9b, 0x4b, 0x39, 0x5f, 0x50,
+	0x2c, 0xd1, 0xf5, 0x84, 0x90, 0xda, 0xd3, 0x5c, 0x8a, 0xb4, 0x04, 0x7b, 0x0a, 0xf8, 0x29, 0x25,
+	0x9d, 0x4d, 0x49, 0x68, 0x3e, 0xe3, 0x14, 0xe2, 0x06, 0x34, 0xf9, 0xb4, 0xd3, 0xe8, 0x37, 0xf6,
+	0xec, 0x51, 0x93, 0x4f, 0xd9, 0x0e, 0x6c, 0x8f, 0xc9, 0x0b, 0xfd, 0x8b, 0x2c, 0x77, 0x44, 0x5f,
+	0x22, 0x52, 0x9a, 0xbd, 0x82, 0xf6, 0xdd, 0x17, 0x2a, 0x90, 0x42, 0x11, 0xf6, 0xc0, 0xce, 0x24,
+	0xaa, 0x4e, 0xa3, 0xbf, 0xb2, 0x67, 0x8f, 0x8a, 0x00, 0x73, 0xa0, 0x97, 0x97, 0x15, 0xd7, 0xd2,
+	0x37, 0x9a, 0xee, 0x11, 0x70, 0x00, 0x3b, 0xd5, 0xfc, 0x8f, 0x11, 0x85, 0xb7, 0xd8, 0x81, 0x55,
+	0x15, 0x4d, 0x3e, 0x93, 0xaf, 0xd3, 0xfc, 0xec, 0xc8, 0x0e, 0xa1, 0x5d, 0xbd, 0x74, 0xce, 0x95,
+	0xc6, 0x3e, 0xb4, 0x78, 0x1e, 0xc9, 0xe4, 0x95, 0x43, 0xec, 0x4d, 0x9d, 0xc0, 0x53, 0xd2, 0x23,
+	0x4a, 0xda, 0x7b, 0x0c, 0x56, 0xe2, 0xb4, 0xb9, 0xdc, 0x1a, 0x58, 0xce, 0x71, 0x7c, 0x1c, 0xa5,
+	0x51, 0xd6, 0x07, 0xeb, 0x3d, 0x79, 0x0b, 0x7d, 0x81, 0x6d, 0xb0, 0x94, 0xf6, 0x74, 0xa4, 0x52,
+	0x79, 0xe9, 0x69, 0xf0, 0xb7, 0x01, 0xad, 0xac, 0xc4, 0xd1, 0x87, 0x33, 0x3c, 0x07, 0x6b, 0x18,
+	0x92, 0xa7, 0x09, 0xd7, 0x9d, 0x2c, 0x3e, 0x0e, 0xc8, 0xef, 0xee, 0x3a, 0xc5, 0x76, 0x55, 0x67,
+	0xc5, 0x1e, 0xfd, 0xfc, 0xfd, 0xe7, 0x57, 0x73, 0x83, 0xd9, 0x6e, 0x66, 0xef, 0x61, 0x63, 0x1f,
+	0xdf, 0xc1, 0xff, 0xa6, 0x53, 0xcb, 0x39, 0xbe, 0x0a, 0xf4, 0x6d, 0xf7, 0x49, 0x09, 0x52, 0x3f,
+	0x31, 0xb6, 0x65, 0x40, 0x2d, 0x2c, 0x40, 0x78, 0x0a, 0x2b, 0xa7, 0xa4, 0xf1, 0x7e, 0x05, 0x5d,
+	0x3b, 0x0f, 0xb2, 0xb6, 0x61, 0x6c, 0xe2, 0x46, 0xce, 0x70, 0xbf, 0xf1, 0xe9, 0xf7, 0xc1, 0x8f,
+	0x15, 0xd8, 0xae, 0xfa, 0x19, 0xb7, 0x3d, 0x01, 0x2b, 0x0e, 0x5c, 0x12, 0xee, 0x38, 0xd5, 0x0c,
+	0x63, 0xc0, 0xb3, 0xba, 0xf2, 0x35, 0x5b, 0x93, 0x55, 0x67, 0x2d, 0xb7, 0x18, 0x65, 0x6c, 0xc6,
+	0x18, 0xac, 0xa1, 0x27, 0x7c, 0x5a, 0xe0, 0xb2, 0xa8, 0x6e, 0xea, 0x1b, 0xeb, 0x18, 0x24, 0xee,
+	0x6f, 0x96, 0x90, 0xa6, 0x25, 0x3c, 0xb9, 0xc7, 0xe1, 0xfa, 0xb5, 0x63, 0x0f, 0x0d, 0x6c, 0x1d,
+	0xcb, 0xfa, 0x70, 0x96, 0x78, 0xbc, 0xb4, 0xb2, 0x5e, 0xcd, 0xeb, 0xa1, 0x14, 0xda, 0xe3, 0x82,
+	0xc2, 0x4c, 0x2f, 0x56, 0xf4, 0x0e, 0xde, 0xc2, 0xda, 0xd1, 0xf4, 0x8a, 0x1b, 0xd3, 0x5f, 0x82,
+	0x35, 0x36, 0x5b, 0x98, 0xab, 0xdf, 0x2a, 0x95, 0x4f, 0x16, 0x97, 0x3d, 0x30, 0x28, 0x1b, 0x57,
+	0xdd, 0x74, 0x63, 0xa7, 0xd0, 0x3a, 0x89, 0x84, 0x6f, 0x26, 0x17, 0x70, 0x7c, 0x01, 0x10, 0x8f,
+	0x87, 0x7b, 0x0b, 0xfe, 0x95, 0x72, 0x50, 0x66, 0x5c, 0xd1, 0xab, 0x2a, 0x92, 0x58, 0x3e, 0xec,
+	0xbb, 0xe9, 0x6b, 0x26, 0xbd, 0x89, 0xff, 0x4d, 0x2c, 0xf3, 0x61, 0x3a, 0xf8, 0x17, 0x00, 0x00,
+	0xff, 0xff, 0xdf, 0xeb, 0x1c, 0xc3, 0x62, 0x05, 0x00, 0x00,
 }
